--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,13 @@
 {
   "presets": [
-    [
-      "@babel/preset-env"
-    ]  
+     "@babel/preset-env"
   ],
+  "env": {
+    "development": {
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+    },
+    "production": {
+      "plugins": ["@babel/plugin-transform-modules-commonjs"]
+    }
+  }
 }
